fix names of environments

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,11 @@
 # Copyright (c) Moshe Zadka
 # See LICENSE for details.
 [tox]
-envlist = book,tex,html
+envlist = html,epub,pdf
 toxworkdir = {toxinidir}/build/tox
 skipsdist = True
 
-[testenv:book]
+[testenv:html]
 changedir = docs
 deps =
     sphinx
@@ -13,7 +13,7 @@ commands =
     sphinx-build -W -b html -d {envtmpdir}/doctrees . {envtmpdir}/html
 basepython = python2.7
 
-[testenv:html]
+[testenv:epub]
 changedir = docs
 deps =
     sphinx
@@ -21,7 +21,7 @@ commands =
     sphinx-build -W -b epub -d {envtmpdir}/doctrees . {envtmpdir}/html
 basepython = python2.7
 
-[testenv:tex]
+[testenv:pdf]
 changedir = docs
 deps =
     sphinx
